packages/ui/src/app/app.module.css
:root {
  --header-height: 0px;
}

.root {
  padding-top: var(--header-height);
}

.empty {
  padding-top: var(--space-large);
  min-height: 80vh;
  text-align: center;
}

.summaryContainer {
  padding-top: var(--space-medium);
  padding-bottom: var(--space-xsmall);
}

.tabsContainer {
  border-bottom: 1px solid var(--color-outline);
  background: var(--color-light);
}

.tabs {
  margin-bottom: -1px;
}

.tabActive {
  color: var(--color-primary);
}

.tabActive::after {
  background: currentColor;
}

.tabsContent {
  padding-top: var(--space-medium);
  padding-bottom: var(--space-medium);
  min-height: 480px;
}

@media (min-width: 600px) {
  :root {
    --header-height: 52px;
  }

  .header {
    position: fixed;
    z-index: var(--layer-high);
    left: 0;
    top: 0;
    right: 0;
    height: var(--header-height);
    background-color: var(--color-background);
    border-bottom: 1px solid var(--color-outline);
  }

  .tabsContainer {
    position: sticky;
    top: var(--header-height);
    z-index: 100;
  }
}

